[package]
name = "rust-books-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.4", features= ["postgres", "r2d2"]}
diesel_codegen = { version = "0.16.1", features= ["postgres"]}

# r2d2 = "0.8.10"

rocket = { version = "0.5.0", features=["json"]}
rocket_contrib = {version="0.4.11", default-features = false, features = ["json"]}
rocket_codegen = "0.5.0"

dotenv = "0.15.0"
serde = {version = "1.0.193", features=["derive"]}
